# sim-bridge

./: .gitignore  README.md  bridge.slnx  bridge.vcxproj  build.py
.github/workflows/: cmake-build.yml
desktop/: CMakeLists.txt
desktop/include/: main.hpp  serial_port.hpp  sim_packet.hpp  udp_socket.hpp
desktop/src/: bridge.cpp  main.cpp  serial_port.cpp  udp_socket.cpp
microcontroller/controller/: platformio.ini
microcontroller/controller/include/: packet.hpp
microcontroller/controller/src/: main.cpp
tests/: test_bridge.py
